# cpsi

./: .gitmodules  Cargo.toml  README.md  ctf-fear-gist-trigger.txt  ctf-fear-pivot-trigger.txt  ctf-fear-trigger.txt
.github/workflows/: ctf-fear.yml
docs/: README.md  architecture.md  build-system.md  dependencies.md  design-philosophy.md  installed-database.md  open-issues.md  package-format.md  repository.md  scripts.md  signatures.md  transactions.md  versioning.md
src/: main.rs
src/cli/: install.rs  update.rs
src/dependency/: mod.rs  resolve.rs
src/package/: mod.rs
src/repository/: mod.rs  parquet.rs  sync.rs
src/util/: architecture.rs  constants.rs  errors.rs  mod.rs  net.rs  result.rs  version.rs
