[package]
name = "cpsi"
version = "0.1.0"
edition = "2024"

[dependencies]
arrow = "58.3.0"
clap = { version = "4.6.1", features = ["derive"] }
parquet = "58.3.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_arrow = { version = "0.14.1", features = ["arrow-58"] }
thiserror = "2.0.18"
