[package]
name = "cpsi"
version = "0.1.0"
edition = "2024"

[dependencies]
arrow = "58.3.0"
clap = { version = "4.6.1", features = ["derive"] }
parquet = "58.3.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_arrow = { version = "0.14.1", features = ["arrow-58"] }
thiserror = "2.0.18"
cps-common = { path = "vendor/cps-common" }
sha256 = "1.6.0"
minisign-verify = "0.2.5"
futures-util = "0.3.31"
indicatif = "0.17.9"
reqwest = { version = "0.12.24", default-features = false, features = ["rustls-tls", "stream"] }
tokio = { version = "1.48.0", features = ["fs", "io-util", "macros", "rt-multi-thread"] }
toml = "1.1.2"
